// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomePage component > Search matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="_search_6a3077"
  >
    <div
      class="_search_box_6a3077"
    />
  </div>
  <div
    class="_input_6a3077"
    style="padding: 0px 0px 0px 1vw; top: 10vw; width: 80%; left: 8%;"
  >
    <div
      class="_field_47a843"
    >
      <img
        alt="WeatherStatus"
        draggable="false"
        height="20"
        src="/project1/icons/search.svg"
        style="margin: 0px;"
        width="20"
      />
      <input
        class="_input_47a843"
        placeholder="Søk for områder"
        type="text"
        value="lol"
      />
    </div>
    <div
      class="_options_6a3077"
    >
      <div>
        <select
          class="_select_4532b2"
        >
          <option
            disabled=""
            value=""
          >
            Fylke
          </option>
          <option
            value="Troms og Finnmark"
          >
            Troms og Finnmark
          </option>
          <option
            value="Nordland"
          >
            Nordland
          </option>
          <option
            value="Trøndelag"
          >
            Trøndelag
          </option>
          <option
            value="Møre og Romsdal"
          >
            Møre og Romsdal
          </option>
          <option
            value="Vestland"
          >
            Vestland
          </option>
          <option
            value="Rogaland"
          >
            Rogaland
          </option>
          <option
            value="Agder"
          >
            Agder
          </option>
          <option
            value="Vestfold og Telemark"
          >
            Vestfold og Telemark
          </option>
          <option
            value="Viken"
          >
            Viken
          </option>
          <option
            value="Oslo"
          >
            Oslo
          </option>
          <option
            value="Innlandet"
          >
            Innlandet
          </option>
        </select>
      </div>
      <p
        class="_reset_6a3077"
      >
        Tilbakestill filtre
      </p>
    </div>
    <div
      class="_divider_6a3077"
    />
    <div
      class="_places_6a3077"
    />
  </div>
  <main
    class="_main_6a3077"
  >
    <div
      class="_sidebar_6a3077"
    >
      <div
        class="_current_weather_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="120"
          src="/project1/yr-icons/undefined.svg"
          style="margin: 0px;"
          width="120"
        />
      </div>
      <h3
        class="_temperature_6a3077"
      >
        °C
      </h3>
      <h3
        class="_location_6a3077"
      >
        Favorite 1
      </h3>
      <h3
        class="_day_time_6a3077"
      >
        <span
          class="_day_6a3077"
        >
          Søndag,
        </span>
         
        <span
          class="_time_6a3077"
        >
          15:53
        </span>
      </h3>
      <div
        class="_extra_info_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="30"
          src="/project1/yr-icons/undefined.svg"
          style="margin: 0px;"
          width="30"
        />
        <h4 />
      </div>
      <div
        class="_extra_info_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="30"
          src="/project1/yr-icons/rain.svg"
          style="margin: 0px;"
          width="30"
        />
        <h4>
          Nedbør - mm
        </h4>
      </div>
    </div>
    <div
      class="_favorites_6a3077"
    >
      <div
        class="_header_6a3077"
      >
        <p
          class="_container_title_6a3077"
        >
          Dine plasser
        </p>
        <a
          class="_link_6a3077"
          href="/location/Favorite 1/123.456/789.012"
        >
          <p>
            Se mer info for Favorite 1
          </p>
          <img
            alt="WeatherStatus"
            draggable="false"
            height="25"
            src="/project1/icons/arrow-right.svg"
            style="margin: 0px;"
            width="25"
          />
        </a>
      </div>
      <div
        class="_card_container_6a3077"
      >
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: black; color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 1
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 2
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 3
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
      </div>
      <h3
        class="_title_6a3077"
      >
        Høydepunkter for Favorite 1
      </h3>
      <div
        class="_card_container_6a3077"
      >
        <div
          class="_container_a120ba"
        >
          <p
            class="_title_a120ba"
          >
            UV Index
          </p>
          <div
            class="_bar_container_a120ba"
          >
            <div
              class="_bar_a120ba"
            >
              <div
                style="background-color: rgb(255, 142, 60); height: 100%;"
              />
            </div>
            <p
              class="_uv_index_a120ba"
            />
          </div>
        </div>
        <div
          class="_container_1d4056"
        >
          <p
            class="_title_1d4056"
          >
            Vind
          </p>
          <div
            class="_info_container_1d4056"
          >
            <p
              class="_uv_index_1d4056"
            >
              m/s 
              <span
                style="color: rgba(60, 103, 255, 0.6);"
              >
                 ()
              </span>
            </p>
            <div
              class="_compass_1d4056"
            >
              <img
                alt="arrow"
                height="24px"
                src="/project1/icons/compass.svg"
                style="transform: rotate(undefineddeg);"
                width="24px"
              />
            </div>
          </div>
        </div>
        <div
          class="_container_7ae00b"
        >
          <p
            class="_title_7ae00b"
          >
            Luftfuktighet
          </p>
          <div
            class="_humidity_container_7ae00b"
          >
            <div
              class="_status_container_7ae00b"
            >
              <div
                class="_circle_7ae00b"
                style="background-color: rgb(255, 141, 141);"
              />
              <p>
                Høy
              </p>
            </div>
            <p
              class="_humidity_7ae00b"
            >
              NaN%
            </p>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`HomePage component > matches snapshot with favorites 1`] = `
<DocumentFragment>
  <div
    class="_input_6a3077"
    style="padding: 0px 0px 0px 1vw;"
  >
    <div
      class="_field_47a843"
    >
      <img
        alt="WeatherStatus"
        draggable="false"
        height="20"
        src="/project1/icons/search.svg"
        style="margin: 0px;"
        width="20"
      />
      <input
        class="_input_47a843"
        placeholder="Søk for områder"
        type="text"
        value=""
      />
    </div>
  </div>
  <main
    class="_main_6a3077"
  >
    <div
      class="_sidebar_6a3077"
    >
      <div
        class="_current_weather_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="120"
          src="/project1/yr-icons/undefined.svg"
          style="margin: 0px;"
          width="120"
        />
      </div>
      <h3
        class="_temperature_6a3077"
      >
        °C
      </h3>
      <h3
        class="_location_6a3077"
      >
        Favorite 1
      </h3>
      <h3
        class="_day_time_6a3077"
      >
        <span
          class="_day_6a3077"
        >
          Søndag,
        </span>
         
        <span
          class="_time_6a3077"
        >
          15:53
        </span>
      </h3>
      <div
        class="_extra_info_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="30"
          src="/project1/yr-icons/undefined.svg"
          style="margin: 0px;"
          width="30"
        />
        <h4 />
      </div>
      <div
        class="_extra_info_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="30"
          src="/project1/yr-icons/rain.svg"
          style="margin: 0px;"
          width="30"
        />
        <h4>
          Nedbør - mm
        </h4>
      </div>
    </div>
    <div
      class="_favorites_6a3077"
    >
      <div
        class="_header_6a3077"
      >
        <p
          class="_container_title_6a3077"
        >
          Dine plasser
        </p>
        <a
          class="_link_6a3077"
          href="/location/Favorite 1/123.456/789.012"
        >
          <p>
            Se mer info for Favorite 1
          </p>
          <img
            alt="WeatherStatus"
            draggable="false"
            height="25"
            src="/project1/icons/arrow-right.svg"
            style="margin: 0px;"
            width="25"
          />
        </a>
      </div>
      <div
        class="_card_container_6a3077"
      >
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: black; color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 1
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 2
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 3
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
      </div>
      <h3
        class="_title_6a3077"
      >
        Høydepunkter for Favorite 1
      </h3>
      <div
        class="_card_container_6a3077"
      >
        <div
          class="_container_a120ba"
        >
          <p
            class="_title_a120ba"
          >
            UV Index
          </p>
          <div
            class="_bar_container_a120ba"
          >
            <div
              class="_bar_a120ba"
            >
              <div
                style="background-color: rgb(255, 142, 60); height: 100%;"
              />
            </div>
            <p
              class="_uv_index_a120ba"
            />
          </div>
        </div>
        <div
          class="_container_1d4056"
        >
          <p
            class="_title_1d4056"
          >
            Vind
          </p>
          <div
            class="_info_container_1d4056"
          >
            <p
              class="_uv_index_1d4056"
            >
              m/s 
              <span
                style="color: rgba(60, 103, 255, 0.6);"
              >
                 ()
              </span>
            </p>
            <div
              class="_compass_1d4056"
            >
              <img
                alt="arrow"
                height="24px"
                src="/project1/icons/compass.svg"
                style="transform: rotate(undefineddeg);"
                width="24px"
              />
            </div>
          </div>
        </div>
        <div
          class="_container_7ae00b"
        >
          <p
            class="_title_7ae00b"
          >
            Luftfuktighet
          </p>
          <div
            class="_humidity_container_7ae00b"
          >
            <div
              class="_status_container_7ae00b"
            >
              <div
                class="_circle_7ae00b"
                style="background-color: rgb(255, 141, 141);"
              />
              <p>
                Høy
              </p>
            </div>
            <p
              class="_humidity_7ae00b"
            >
              NaN%
            </p>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`HomePage component > matches snapshot with no favorites 1`] = `
<DocumentFragment>
  <div
    class="_input_6a3077"
    style="padding: 0px 0px 0px 1vw;"
  >
    <div
      class="_field_47a843"
    >
      <img
        alt="WeatherStatus"
        draggable="false"
        height="20"
        src="/project1/icons/search.svg"
        style="margin: 0px;"
        width="20"
      />
      <input
        class="_input_47a843"
        placeholder="Søk for områder"
        type="text"
        value=""
      />
    </div>
  </div>
  <main
    class="_main_6a3077"
  >
    <div
      class="_sidebar_6a3077"
    >
      <div
        class="_current_weather_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="120"
          src="/project1/yr-icons/undefined.svg"
          style="margin: 0px;"
          width="120"
        />
      </div>
      <h3
        class="_temperature_6a3077"
      >
        °C
      </h3>
      <h3
        class="_location_6a3077"
      >
        Favorite 1
      </h3>
      <h3
        class="_day_time_6a3077"
      >
        <span
          class="_day_6a3077"
        >
          Søndag,
        </span>
         
        <span
          class="_time_6a3077"
        >
          15:53
        </span>
      </h3>
      <div
        class="_extra_info_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="30"
          src="/project1/yr-icons/undefined.svg"
          style="margin: 0px;"
          width="30"
        />
        <h4 />
      </div>
      <div
        class="_extra_info_6a3077"
      >
        <img
          alt="WeatherStatus"
          draggable="false"
          height="30"
          src="/project1/yr-icons/rain.svg"
          style="margin: 0px;"
          width="30"
        />
        <h4>
          Nedbør - mm
        </h4>
      </div>
    </div>
    <div
      class="_favorites_6a3077"
    >
      <div
        class="_header_6a3077"
      >
        <p
          class="_container_title_6a3077"
        >
          Dine plasser
        </p>
        <a
          class="_link_6a3077"
          href="/location/Favorite 1/123.456/789.012"
        >
          <p>
            Se mer info for Favorite 1
          </p>
          <img
            alt="WeatherStatus"
            draggable="false"
            height="25"
            src="/project1/icons/arrow-right.svg"
            style="margin: 0px;"
            width="25"
          />
        </a>
      </div>
      <div
        class="_card_container_6a3077"
      >
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: black; color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 1
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 2
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
        <button
          class="_button_6a3077"
        >
          <div
            class="_card_3c4546"
          >
            <div
              class="_container_3c4546"
              style="background-color: white;"
            >
              <h1
                class="_location_3c4546"
              >
                Favorite 3
              </h1>
              <img
                alt="WeatherStatus"
                draggable="false"
                height="24"
                src="/project1/yr-icons/clearsky_day.svg"
                style="margin: 0px;"
                width="24"
              />
              <div
                class="_temperatures_3c4546"
              >
                <p
                  class="_temperature_3c4546"
                >
                  0°
                </p>
                <p
                  class="_night_temperature_3c4546"
                >
                  0°
                </p>
              </div>
            </div>
          </div>
        </button>
      </div>
      <h3
        class="_title_6a3077"
      >
        Høydepunkter for Favorite 1
      </h3>
      <div
        class="_card_container_6a3077"
      >
        <div
          class="_container_a120ba"
        >
          <p
            class="_title_a120ba"
          >
            UV Index
          </p>
          <div
            class="_bar_container_a120ba"
          >
            <div
              class="_bar_a120ba"
            >
              <div
                style="background-color: rgb(255, 142, 60); height: 100%;"
              />
            </div>
            <p
              class="_uv_index_a120ba"
            />
          </div>
        </div>
        <div
          class="_container_1d4056"
        >
          <p
            class="_title_1d4056"
          >
            Vind
          </p>
          <div
            class="_info_container_1d4056"
          >
            <p
              class="_uv_index_1d4056"
            >
              m/s 
              <span
                style="color: rgba(60, 103, 255, 0.6);"
              >
                 ()
              </span>
            </p>
            <div
              class="_compass_1d4056"
            >
              <img
                alt="arrow"
                height="24px"
                src="/project1/icons/compass.svg"
                style="transform: rotate(undefineddeg);"
                width="24px"
              />
            </div>
          </div>
        </div>
        <div
          class="_container_7ae00b"
        >
          <p
            class="_title_7ae00b"
          >
            Luftfuktighet
          </p>
          <div
            class="_humidity_container_7ae00b"
          >
            <div
              class="_status_container_7ae00b"
            >
              <div
                class="_circle_7ae00b"
                style="background-color: rgb(255, 141, 141);"
              />
              <p>
                Høy
              </p>
            </div>
            <p
              class="_humidity_7ae00b"
            >
              NaN%
            </p>
          </div>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
